--- a/views/index.htm
+++ b/views/index.htm
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>URL Shortener</title>
+	<title>Image Search</title>
 	<link rel="stylesheet" type="text/css" href="/public/css/bootstrap/bootstrap.min.css">
 
 </head>
 <body>
 	<div class="container">
-		<h1>API Basejump: URL Shortener Microservice</h1>
+		<h1>API Basejump: Image Search Abstraction Layer</h1>
 		<blockquote>
 			User stories:
-				<ul>1) I can pass a URL as a parameter and I will receive a shortened URL in the JSON response.
+				<ul>1) I can get the image URLs, snippets and page urls for a set of images relating to a given search string.
 				</ul>
-				<ul>2) When I visit that shortened URL, it will redirect me to my original link.</ul>
+				<ul>2)  I can paginate through the responses by adding a ?offset=2 parameter to the URL.</ul>
+				<ul>2)  I can get a list of the most recently submitted search strings.</ul>
 		</blockquote>
 		<h3>Example usage:</h3>
-		<code>https://tyni-url.herokuapp.com/new/https://www.google.com</code><br>
-		<code>https://tyni-url.herokuapp.com/http://freecodecamp.com/news</code><br>
+		<h4>Image search</h4>
+		<code>https://search4image.herokuapp.com/api/imagesearch/lolcats%20funny?offset=8 </code><br><br>
+		<h4>Latest search strings</h4>
+		<code> https://search4image.herokuapp.com/api/latest/imagesearch/</code><br>
 		<h3>Example creation output:</h3>
-		<code>{ "original_url": "http://freecodecamp.com/news", "short_url": "https://tyni-url.herokuapp.com/63" } </code>
-	
-		<h3>Usage:</h3>
-		<code>https://tyni-url.herokuapp.com/63</code>
-	
-		<h3>Will direct to:</h3>
-		<code>http://freecodecamp.com/news</code>
+		<h4>Image search</h4>
+		<code> 
+		  [{<br>
+		    "url": "http://p.im9.eu/funny-cat-pictures-lolcats-hey-human.jpg",<br>
+		    "snippet": "Cute Funny Cat Pictures Lolcats",<br>
+		    "thumbnail": "http://ts2.mm.bing.net/th?id=OIP.M1f5da418d6690f6003ce5524bd1c75ceo0&pid=15.1",<br>
+		    "context": "http://memespp.com/lolcats-invisible"<br>
+		  },<br>
+		  ...
+		  ]
+ 		 </code><br><br>
+		 <h4>Latest search strings</h4>
+ 		 <code>
+			  [{<br>
+			    "term": "lolcats funny",<br>
+			    "when": "2016-08-23T10:28:06.699Z"<br>
+			  },<br>
+			  ...
+			  ]
+ 		 </code>
+
 		</div><br>
 	<footer class="container">
 		Project for freeCodeCamp by <a href="https://freecodecamp.com/emmabaye" target="_blank">emmabaye</a>
